Updated logback file